bk_ida/gccida/c0/add_bound_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bound_info/src/dwarf2out.c:9547:48: error: must use 'enum' tag to refer to type 'dwarf_attribute'
void  add_bound_info( dw_die_ref subrange_die, dwarf_attribute bound_attr, tree bound) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bound_info/src/dwarf2out.c:9598:22: error: use of undeclared identifier 'machine_mode'
loc = gen_rtx_MEM( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)loc), new_addr); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bound_info/src/dwarf2out.c:9598:37: error: expected expression
loc = gen_rtx_MEM( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)loc), new_addr); 
                                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_bound_info/src/obj/dwarf2out.o] Error 1
